--- a/portfolio.html
+++ b/portfolio.html
@@ -3,8 +3,113 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dharun Ashokkumar: portfolio</title>
+
+    <title>Portfolio - Education, Experience & Technical Skills</title>
+
+    <meta name="description" content="BTech student at LPU building dadscloud infrastructure. Experience in web development, IoT systems, cybersecurity. Pantech intern. Available for summer 2026 internships.">
+    <meta name="keywords" content="dharun ashokkumar portfolio, btech computer science, lpu student, dadscloud founder, web developer, infrastructure engineer, iot developer, pantech intern, python, javascript, react, docker, linux">
+    <meta name="author" content="Dharun Ashokkumar">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://dharunashokkumar.com/portfolio.html">
+
+    <!-- Crawling/Indexing by search engines -->
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#555555">
+
     <link rel="icon" href="/favicon/favicon.png">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Dharun Ashokkumar">
+    <meta property="og:title" content="Portfolio - Education, Experience & Technical Skills">
+    <meta property="og:description" content="BTech student at LPU building dadscloud infrastructure. Experience in web development, IoT systems, cybersecurity. Pantech intern. Available for summer 2026 internships.">
+    <meta property="og:url" content="https://dharunashokkumar.com/portfolio.html">
+    <meta property="og:image" content="https://dharunashokkumar.com/favicon/favicon.png">
+    <meta property="og:image:alt" content="Dharun Ashokkumar Portfolio">
+    <meta property="og:locale" content="en_GB">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@dharuna457">
+    <meta name="twitter:creator" content="@dharuna457">
+    <meta name="twitter:title" content="Portfolio - Education, Experience & Technical Skills">
+    <meta name="twitter:description" content="BTech student at LPU building dadscloud infrastructure. Experience in web development, IoT systems, cybersecurity. Pantech intern. Available for summer 2026 internships.">
+    <meta name="twitter:image" content="https://dharunashokkumar.com/favicon/favicon.png">
+
+    <!-- Schema.org structured data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ProfilePage",
+      "name": "Dharun Ashokkumar Portfolio",
+      "description": "Professional portfolio showcasing education, experience, and technical skills in software development and infrastructure engineering.",
+      "url": "https://dharunashokkumar.com/portfolio.html",
+      "mainEntity": {
+        "@type": "Person",
+        "name": "Dharun Ashokkumar",
+        "url": "https://dharunashokkumar.com",
+        "jobTitle": "Software Developer & Infrastructure Engineer",
+        "description": "BTech Computer Science student building cloud infrastructure and practical software solutions",
+        "email": "dharuna457@gmail.com",
+        "alumniOf": {
+          "@type": "EducationalOrganization",
+          "name": "Lovely Professional University",
+          "location": "Punjab, India"
+        },
+        "knowsAbout": [
+          "Web Development",
+          "Cloud Infrastructure",
+          "IoT Systems",
+          "Cybersecurity",
+          "Python",
+          "JavaScript",
+          "React",
+          "Docker",
+          "Linux"
+        ],
+        "hasOccupation": {
+          "@type": "Occupation",
+          "name": "Development Intern",
+          "occupationLocation": {
+            "@type": "Place",
+            "name": "Pantech Prolabs India Pvt Ltd"
+          },
+          "startDate": "2024-10",
+          "endDate": "2025-01"
+        }
+      },
+      "datePublished": "2024-01-01",
+      "dateModified": "2025-11-13",
+      "inLanguage": "en-GB",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "Dharun Ashokkumar",
+        "url": "https://dharunashokkumar.com"
+      },
+      "breadcrumb": {
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://dharunashokkumar.com"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Portfolio",
+            "item": "https://dharunashokkumar.com/portfolio.html"
+          }
+        ]
+      }
+    }
+    </script>
+
     <link rel="stylesheet" type="text/css" href='css/styles.css'>
     <style>
       /* Clean expandable portfolio styles */
