--- a/resume.html
+++ b/resume.html
@@ -4,14 +4,134 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Dharun Ashokkumar: interactive resume</title>
+    <title>Interactive Resume - Software Developer & Infrastructure</title>
 
-    <meta name="description" content="interactive resume - skills, experience, projects, achievements">
+    <meta name="description" content="Interactive resume showcasing skills in Python, JavaScript, React, Docker, Linux. BTech student, Pantech intern, dadscloud founder. Experience in web development & IoT.">
+    <meta name="keywords" content="dharun ashokkumar resume, software developer resume, infrastructure engineer, python developer, javascript developer, react developer, docker, linux, iot developer, web development, pantech intern, dadscloud">
     <meta name="author" content="Dharun Ashokkumar">
-    <meta name="robots" content="index,follow">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://dharunashokkumar.com/resume.html">
+
+    <!-- Crawling/Indexing by search engines -->
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#555555">
 
     <link rel="icon" href="/favicon/favicon.png">
     <link rel="apple-touch-icon" href="/favicon/favicon.png" type="image/png" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Dharun Ashokkumar">
+    <meta property="og:title" content="Interactive Resume - Software Developer & Infrastructure">
+    <meta property="og:description" content="Interactive resume showcasing skills in Python, JavaScript, React, Docker, Linux. BTech student, Pantech intern, dadscloud founder. Experience in web development & IoT.">
+    <meta property="og:url" content="https://dharunashokkumar.com/resume.html">
+    <meta property="og:image" content="https://dharunashokkumar.com/favicon/favicon.png">
+    <meta property="og:image:alt" content="Dharun Ashokkumar Interactive Resume">
+    <meta property="og:locale" content="en_GB">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@dharuna457">
+    <meta name="twitter:creator" content="@dharuna457">
+    <meta name="twitter:title" content="Interactive Resume - Software Developer & Infrastructure">
+    <meta name="twitter:description" content="Interactive resume showcasing skills in Python, JavaScript, React, Docker, Linux. BTech student, Pantech intern, dadscloud founder. Experience in web development & IoT.">
+    <meta name="twitter:image" content="https://dharunashokkumar.com/favicon/favicon.png">
+
+    <!-- Schema.org structured data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ProfilePage",
+      "name": "Dharun Ashokkumar Resume",
+      "description": "Interactive resume showcasing professional experience, technical skills, education, and projects in software development and infrastructure engineering.",
+      "url": "https://dharunashokkumar.com/resume.html",
+      "mainEntity": {
+        "@type": "Person",
+        "name": "Dharun Ashokkumar",
+        "url": "https://dharunashokkumar.com",
+        "email": "dharuna457@gmail.com",
+        "jobTitle": "Software Developer & Infrastructure Engineer",
+        "description": "BTech Computer Science student specializing in cloud infrastructure, web development, and IoT systems",
+        "alumniOf": {
+          "@type": "EducationalOrganization",
+          "name": "Lovely Professional University",
+          "location": "Punjab, India"
+        },
+        "hasCredential": [
+          {
+            "@type": "EducationalOccupationalCredential",
+            "name": "BTech Computer Science Engineering",
+            "educationalLevel": "Undergraduate",
+            "credentialCategory": "degree"
+          }
+        ],
+        "knowsAbout": [
+          "Python",
+          "JavaScript",
+          "React",
+          "Node.js",
+          "Docker",
+          "Linux",
+          "Cloud Infrastructure",
+          "IoT",
+          "Raspberry Pi",
+          "ESP32",
+          "Cybersecurity",
+          "Web Development"
+        ],
+        "hasOccupation": [
+          {
+            "@type": "Occupation",
+            "name": "Development Intern",
+            "occupationLocation": {
+              "@type": "Organization",
+              "name": "Pantech Prolabs India Pvt Ltd"
+            },
+            "startDate": "2024-10",
+            "endDate": "2025-01"
+          },
+          {
+            "@type": "Occupation",
+            "name": "Founder",
+            "occupationLocation": {
+              "@type": "Organization",
+              "name": "dadscloud"
+            },
+            "startDate": "2023"
+          }
+        ]
+      },
+      "datePublished": "2024-01-01",
+      "dateModified": "2025-11-13",
+      "inLanguage": "en-GB",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "Dharun Ashokkumar",
+        "url": "https://dharunashokkumar.com"
+      },
+      "breadcrumb": {
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://dharunashokkumar.com"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Resume",
+            "item": "https://dharunashokkumar.com/resume.html"
+          }
+        ]
+      }
+    }
+    </script>
 
     <link rel="stylesheet" type="text/css" href='css/styles.css'>
     <style>
