--- a/timeline.html
+++ b/timeline.html
@@ -4,14 +4,121 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Dharun Ashokkumar: timeline</title>
+    <title>Personal Timeline - Life Story Woven with Internet History</title>
 
-    <meta name="description" content="a timeline merging my life with internet history">
+    <meta name="description" content="Interactive timeline merging personal journey with internet milestones from 2000-2025. From Facebook's launch to building dadscloud, tracking growth alongside tech evolution.">
+    <meta name="keywords" content="personal timeline, internet history timeline, tech journey, software developer journey, digital native, growing up digital, facebook launch, github launch, chatgpt, dadscloud, life story, technology milestones">
     <meta name="author" content="Dharun Ashokkumar">
-    <meta name="robots" content="index,follow">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://dharunashokkumar.com/timeline.html">
+
+    <!-- Crawling/Indexing by search engines -->
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#555555">
 
     <link rel="icon" href="/favicon/favicon.png">
     <link rel="apple-touch-icon" href="/favicon/favicon.png" type="image/png" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Dharun Ashokkumar">
+    <meta property="og:title" content="Personal Timeline - Life Story Woven with Internet History">
+    <meta property="og:description" content="Interactive timeline merging personal journey with internet milestones from 2000-2025. From Facebook's launch to building dadscloud, tracking growth alongside tech evolution.">
+    <meta property="og:url" content="https://dharunashokkumar.com/timeline.html">
+    <meta property="og:image" content="https://dharunashokkumar.com/favicon/favicon.png">
+    <meta property="og:image:alt" content="Personal Timeline - Life & Internet History">
+    <meta property="og:locale" content="en_GB">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@dharuna457">
+    <meta name="twitter:creator" content="@dharuna457">
+    <meta name="twitter:title" content="Personal Timeline - Life Story Woven with Internet History">
+    <meta name="twitter:description" content="Interactive timeline merging personal journey with internet milestones from 2000-2025. From Facebook's launch to building dadscloud, tracking growth alongside tech evolution.">
+    <meta name="twitter:image" content="https://dharunashokkumar.com/favicon/favicon.png">
+
+    <!-- Schema.org structured data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Personal Timeline",
+      "description": "Interactive timeline weaving together personal life milestones with significant events in internet history from 2000 to 2025.",
+      "url": "https://dharunashokkumar.com/timeline.html",
+      "author": {
+        "@type": "Person",
+        "name": "Dharun Ashokkumar",
+        "url": "https://dharunashokkumar.com",
+        "birthDate": "2008"
+      },
+      "about": {
+        "@type": "Person",
+        "name": "Dharun Ashokkumar",
+        "description": "Digital native born in 2008, growing up alongside social media, smartphones, and AI revolution"
+      },
+      "datePublished": "2024-01-01",
+      "dateModified": "2025-11-13",
+      "inLanguage": "en-GB",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "Dharun Ashokkumar",
+        "url": "https://dharunashokkumar.com"
+      },
+      "breadcrumb": {
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://dharunashokkumar.com"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Timeline",
+            "item": "https://dharunashokkumar.com/timeline.html"
+          }
+        ]
+      },
+      "mainEntity": {
+        "@type": "ItemList",
+        "name": "Life & Internet Milestones",
+        "description": "Key moments in personal development alongside internet evolution",
+        "itemListElement": [
+          {
+            "@type": "Event",
+            "name": "Born into Digital Age",
+            "startDate": "2008",
+            "description": "Born in a world where internet was essential infrastructure"
+          },
+          {
+            "@type": "Event",
+            "name": "First Python Program",
+            "startDate": "2020",
+            "description": "Wrote first working code at age 12"
+          },
+          {
+            "@type": "Event",
+            "name": "Started dadscloud",
+            "startDate": "2023",
+            "description": "Building India-based cloud infrastructure platform at age 15"
+          },
+          {
+            "@type": "Event",
+            "name": "University & Internship",
+            "startDate": "2024",
+            "description": "Started BTech at LPU and completed Pantech internship at age 16"
+          }
+        ]
+      },
+      "temporalCoverage": "2000/2025"
+    }
+    </script>
 
     <link rel="stylesheet" type="text/css" href='css/styles.css'>
     <style>
