--- a/museum.html
+++ b/museum.html
@@ -4,14 +4,109 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Dharun Ashokkumar: internet museum</title>
+    <title>Internet Museum - Digital Culture & History Archive</title>
 
-    <meta name="description" content="an interactive museum of internet history, culture, and artifacts">
+    <meta name="description" content="Interactive museum preserving internet history from 1991-2025. Explore web 1.0 nostalgia, meme culture, viral moments, tech milestones & Indian internet evolution.">
+    <meta name="keywords" content="internet museum, digital culture, internet history, web 1.0, memes, viral moments, tech milestones, indian internet culture, dancing baby, geocities, rickroll, doge, chatgpt">
     <meta name="author" content="Dharun Ashokkumar">
-    <meta name="robots" content="index,follow">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://dharunashokkumar.com/museum.html">
+
+    <!-- Crawling/Indexing by search engines -->
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#555555">
 
     <link rel="icon" href="/favicon/favicon.png">
     <link rel="apple-touch-icon" href="/favicon/favicon.png" type="image/png" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Dharun Ashokkumar">
+    <meta property="og:title" content="Internet Museum - Digital Culture & History Archive">
+    <meta property="og:description" content="Interactive museum preserving internet history from 1991-2025. Explore web 1.0 nostalgia, meme culture, viral moments, tech milestones & Indian internet evolution.">
+    <meta property="og:url" content="https://dharunashokkumar.com/museum.html">
+    <meta property="og:image" content="https://dharunashokkumar.com/favicon/favicon.png">
+    <meta property="og:image:alt" content="Internet Museum - Preserving Digital Culture & History">
+    <meta property="og:locale" content="en_GB">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@dharuna457">
+    <meta name="twitter:creator" content="@dharuna457">
+    <meta name="twitter:title" content="Internet Museum - Digital Culture & History Archive">
+    <meta name="twitter:description" content="Interactive museum preserving internet history from 1991-2025. Explore web 1.0 nostalgia, meme culture, viral moments, tech milestones & Indian internet evolution.">
+    <meta name="twitter:image" content="https://dharunashokkumar.com/favicon/favicon.png">
+
+    <!-- Schema.org structured data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "CollectionPage",
+      "name": "Internet Museum - Digital Culture & History Archive",
+      "description": "Interactive museum preserving internet history from 1991-2025, featuring exhibits on web 1.0 nostalgia, meme culture, viral moments, tech milestones, and Indian internet evolution.",
+      "url": "https://dharunashokkumar.com/museum.html",
+      "author": {
+        "@type": "Person",
+        "name": "Dharun Ashokkumar",
+        "url": "https://dharunashokkumar.com"
+      },
+      "creator": {
+        "@type": "Person",
+        "name": "Dharun Ashokkumar"
+      },
+      "datePublished": "2025-01-01",
+      "dateModified": "2025-11-13",
+      "inLanguage": "en-GB",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "Dharun Ashokkumar",
+        "url": "https://dharunashokkumar.com"
+      },
+      "breadcrumb": {
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://dharunashokkumar.com"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Internet Museum",
+            "item": "https://dharunashokkumar.com/museum.html"
+          }
+        ]
+      },
+      "about": [
+        {
+          "@type": "Thing",
+          "name": "Internet History"
+        },
+        {
+          "@type": "Thing",
+          "name": "Digital Culture"
+        },
+        {
+          "@type": "Thing",
+          "name": "Web 1.0"
+        },
+        {
+          "@type": "Thing",
+          "name": "Meme Culture"
+        },
+        {
+          "@type": "Thing",
+          "name": "Tech Milestones"
+        }
+      ]
+    }
+    </script>
 
     <link rel="stylesheet" type="text/css" href='css/styles.css'>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
